# pg_aidb

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  DEV_GUIDE.md  LICENSE  README.ko.md  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
benchmarks/: results.json  run.py
deploy/docker/: Dockerfile.builder  Dockerfile.mock  Dockerfile.pg  Dockerfile.pipeline-worker  Dockerfile.rag  mock_openai.py
deploy/docker/extensions/pg_textsearch/: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  (+1 more)
design/: ARCHITECTURE.md  BACKLOG.md  BENCHMARKS.md  DECISIONS.md  DESIGN_PHILOSOPHY.md  DEV_GUIDE.md  GPU_STRATEGY.md  HANDOFF.md  PLAYBOOK.md  SECURITY.md
extension/: Cargo.toml  Makefile  pg_aidb.control
extension/sql/: restrict_acl.sql
extension/src/: lib.rs
extension/src/client/: mod.rs
extension/src/registry/: mod.rs
extension/src/router/: mod.rs
extension/test/: regression.out
extension/test/expected/: embed_mock.out
extension/test/results/: rag_mock.out  schema_smoke.out
extension/test/sql/: dump_seed.sql  dump_verify.sql  embed_mock.sql  rag_async.sql  rag_context.sql  rag_e2e.sql  rag_filter.sql  rag_hybrid.sql  rag_mmr.sql  rag_parse.sql  schema_smoke.sql
services/: requirements-dev.txt
services/pipeline-worker/: requirements.txt
services/pipeline-worker/sql/: schema.sql
services/pipeline-worker/src/: main.py
services/rag/: requirements.txt
services/rag/src/: main.py
services/shared/: chunker.py  embedder.py  llm.py  structured_log.py
tests/fixtures/: generate.py
(+85 files in other folders)
