[package]
name = "pg_aidb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx         = "=0.18.0"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
ureq         = { version = "2", features = ["json"] }   # blocking HTTP, no async runtime
uuid         = { version = "1", features = ["v4"] }

[dev-dependencies]
pgrx-tests = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic  = "unwind"
opt-level      = 3
lto            = "fat"
codegen-units  = 1
